Fix the layout issue that was causing lower case g to be cut off in artist names in tracks

--- a/app/assets/stylesheets/white_theme/tracks.scss
+++ b/app/assets/stylesheets/white_theme/tracks.scss
@@ -63,7 +63,7 @@
     div.title {
       overflow: hidden;
       width: auto;
-      height: 35px;
+      height: 40px;
       padding-top: 8px;
       padding-left: 3px;
       flex-grow: 1;
